src/assets/sass/_search_popups.scss
/* ... */
.results-btn {
  display: block;
  color: #fff;
  background-color: $green;
  position: absolute;
  z-index: 2;
  width: 100%;
  top: 0;
  font: 500 20px/30px "Questrial";
  &:hover {
    background-color: $light_green;
    @include transition_bg_color;
    color: #fff;
  }
}

@media (max-width: 992px) {
  .tools-wrap {
    .tools-hint-block {
      border-radius: 8px;
      ul {
        li {
          .path-map, .radius-map, .lasso-map {
            display: none !important;
          }
        }
      }
    }
  }
  //.sidebar-menu-vertical {
  //  display: none !important;
  //}
}

@media (max-width: 767px) {
  .sort-menu {
    width: 100%;
    .hide-wrap {
      .close-popup {
        width: 100%;
      }
    }
  }
  .tools-hint-block {
    a.hide {
      padding: 8px;
      background-size: 95% !important;
    }
  }
  .tools-wrap {
    width: 80%;
    //height: 100%;
    .tools-hint-block {
      border-radius: 10px;
    }
  }
  .weather-wrap {
    width: 100%;
  }
}

@media (max-width: 500px) {
  .sidebar-menu-horizontal {
    ul {
      li {
        width: 50%;
        &:nth-child(3), &:nth-child(4) {
          margin-top: 5px;
        }
      }
    }
  }
  .search-filters {
    height: calc(100% - 114px);
    .sort-date {
      .date-filters {
        .form-group {
          width: 100%;
          input {
            float: right;
          }
        }
      }
    }
    .filters-button {
      width: 100%;
    }
    .search-by-name {
      .search-input {
        width: 100%;
        margin-bottom: 15px;
      }
    }
  }
  .sidebar-menu-wrap {
    position: relative;
    right: 0;
    top: 0;
    bottom: 0;
    width: 100%;
    transform: rotate(0deg);
    height: initial;
    .sidebar-menu-vertical {
      li {
        display: none;
        &:first-child {
          display: block;
          float: right;
          border: none;
          a {
            transform: rotate(90deg);
          }
        }
      }
    }
  }
}

@media (max-width: 400px) {
  .weather-wrap {
    .firstBlock-wrapper {
      height: auto;
      .weatherImg-block, .parameters {
        width: 100%;
        text-align: center;
      }
    }
    .weekForecast {
      padding-bottom: 50px;
      .weekForecast-wrapper {
        .data {
          width: 100%;
          font: 400 18px 'Questrial';
        }
        .weatherIcon, .temperatureWeek {
          width: 50%;
        }
        .temperatureWeek {
          font: 400 16px/45px 'Questrial';
        }
      }
    }
  }
}

@media (min-device-width: 240px) and (max-device-width: 767px) and (orientation: landscape) {
  .sidebar-menu-wrap {
    position: relative;
    right: 0;
    top: 0;
    bottom: 0;
    width: 100%;
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
    height: initial;
    .sidebar-menu-vertical {
      li {
        display: none;
        &:first-child {
          display: block;
          float: right;
          border: none;
          a {
            transform: rotate(90deg);
          }
        }
      }
    }
  }
  .leaflet-bottom {
    .map-tools {
      float: left;
      clear: inherit !important;
    }
  }
}

